# maryland-mva-podcast

./: .gitignore  AGENTS.md  PLAN-Deployment.md  PLAN-Practice-Tests.md  README.md  netlify.toml  pyproject.toml
.github/workflows/: deploy-netlify.yml  deploy-pages.yml  generate-podcast.yml
config/: podcast.yaml
docs/: APPLE-PODCASTS-GUIDE.md  AUDIO-GENERATION.md  COMMANDS-REFERENCE.md  DEPLOYMENT-GUIDE.md  FILE-ORGANIZATION.md  NETLIFY-CONFIGURATION.md  OBSIDIAN-VAULT-GUIDE.md  PODCAST-GENERATOR.md  PRACTICE-TESTS-GUIDE.md  QUICK-START.md  README.md  RSS-FEED-SPECIFICATION.md  SESSION-LOG-2026-07-16.md  TROUBLESHOOTING.md  feed.xml  index.html  manifest.json
obsidian-vault/: README.md
obsidian-vault/.obsidian/: app.json  appearance.json  core-plugins.json
obsidian-vault/00-Overview/: License-Requirements.md  Study-Plan.md  Welcome.md
obsidian-vault/01-Driver-Manual/Chapter-01/: 05.Rapid-Recall-Drill.md  06.Audio-Review-Script.md
obsidian-vault/01-Driver-Manual/Chapter-02/: 05.Rapid-Recall-Drill.md  06.Audio-Review-Script.md
obsidian-vault/01-Driver-Manual/Chapter-03/: 04.Master-Memorization-Sheet.md  06.Audio-Review-Script.md
obsidian-vault/01-Driver-Manual/Chapter-04/: 04.Master-Memorization-Sheet.md  (+1 more)
obsidian-vault/04-Practice/: Full-Practice-Test-Answers.md  Full-Practice-Test.md
podcast/: episodes.json  index.html  podcast.xml
scripts/: build_podcast.py  convert_audio_scripts.py  extract_text.py  generate_all_audio.sh  generate_artwork.py  generate_audio.py  generate_practice_tests.py  package_vault.py  package_vault.sh  podcast_generator.py
(+176 files in other folders)
